# metaRTC5.0-Ubuntu-push-stream-demo

./: .gitignore  README.md
demo/metapushSRS_ZLM_6/: CMakeLists.txt  Readme.md  metartc_srs.cpp  metartc_zlm.cpp  peerconnection_srs.cpp  peerconnection_zlm.cpp
include/: yang_config.h
libmetartc5/src/yangcapture/linux/: YangVideoCaptureLinux.cpp
libmetartccore5/src/yangzlm/: YangZlmConnection.c
metapushSRS5/: CMakeLists.txt  Readme.md  metartc_srs.cpp  metartc_zlm.cpp  peerconnection.cpp  peerconnection_srs.cpp  peerconnection_zlm.cpp
metapushSRS5/builddir/: CMakeCache.txt  Makefile  cmake_install.cmake  metartc_srs  metartc_zlm  peerconnection_srs  peerconnection_zlm
